--- a/L-04/trycash.html
+++ b/L-04/trycash.html
@@ -12,7 +12,7 @@
     <p id="demo"></p>
     <script>
         try{
-            lalala;
+            let lalala;
         } catch(err) {
             alert(err.name);
             alert(err.message);
